src/objects/ANG_AgencyChangesConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Newgen ISS - Agency Changes Configuration with fields to migrated, change codes and possible combinations.</description>
    <fields>
        <fullName>TCA_Application_withdrawal__c</fullName>
        <description>Change Code to be applied after application withdrawal</description>
        <inlineHelpText>Change Code to be applied after application withdrawal</inlineHelpText>
        <label>Application withdrawal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Manager_approval__c</fullName>
        <description>Change Code to be applied after manager approval</description>
        <inlineHelpText>Change Code to be applied after manager approval</inlineHelpText>
        <label>Manager approval</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Not_Applicable_Steps__c</fullName>
        <label>Not Applicable Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Sanity_check__c</fullName>
        <description>Change Code to be applied after sanity check</description>
        <inlineHelpText>Change Code to be applied after sanity check</inlineHelpText>
        <label>Sanity check</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Accreditation_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accreditation type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Legal_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Legal_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Letter_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location_type_diff_legal_ent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location type to different legal entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Major_Shareholding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major shareholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Minor_Shareholding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minor shareholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Trade_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_VMFR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMFR</label>
        <type>Checkbox</type>
    </fields>
    <label>ANG Agency Changes Configuration</label>
    <listViews>
        <fullName>Multiple_Changes_ANG</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>TC_Accreditation_Type__c</columns>
        <columns>TCA_Not_Applicable_Steps__c</columns>
        <columns>TC_Legal_Status__c</columns>
        <columns>TC_Ownership__c</columns>
        <columns>TC_Location__c</columns>
        <columns>TC_Legal_Name__c</columns>
        <columns>TC_Hierarchy__c</columns>
        <columns>TC_Location_Type__c</columns>
        <columns>TC_Major_Shareholding__c</columns>
        <columns>TC_Minor_Shareholding__c</columns>
        <columns>TC_Trade_name__c</columns>
        <columns>TCA_Sanity_check__c</columns>
        <columns>TCA_Manager_approval__c</columns>
        <filterScope>Everything</filterScope>
        <label>Multiple Changes ANG</label>
        <language>en_US</language>
    </listViews>
</CustomObject>